# AttPortal

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
sql/: mock_data.sql
src/app/: app.py  main.py
src/app/api/routers/: attedance_report.py  router.py
src/app/constants/: enum.py
src/app/core/: config.py
src/app/db/: postgres.py
src/app/dependencies/: db_dependencies.py  dependencies.py
src/app/middleware/: access_code.py
src/app/models/entities/: orm.py  schemas.py
src/app/repositories/: base_repository.py
src/app/services/: attendance_service.py
src/tests/: test.py
